export const snapshot = {};

snapshot[`build a site with eta 1`] = `3`;

snapshot[`build a site with eta 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".pug",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`build a site with eta 3`] = `
[
]
`;

snapshot[`build a site with eta 4`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Pug example</title></head><body><h1>Home</h1></body></html>',
  data: {
    content: "extends /layout.pug
block content
  h1 Home
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pug example",
    url: "/extends/",
  },
  dest: {
    ext: ".html",
    path: "/extends/index",
  },
  src: {
    ext: ".pug",
    path: "/extends",
    remote: undefined,
  },
}
`;

snapshot[`build a site with eta 5`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Markdown content</title></head><body><h1>This is a title</h1>
<p>This is a paragraph</p>
<ul>
<li>Option 1</li>
<li>Option 2</li>
</ul></body></html>',
  data: {
    content: "extends ./_includes/layout.pug
block content
  :md
    # This is a title

    This is a paragraph

    - Option 1
    - Option 2
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Markdown content",
    url: "/article.html",
  },
  dest: {
    ext: ".html",
    path: "/article",
  },
  src: {
    ext: ".pug",
    path: "/filter",
    remote: undefined,
  },
}
`;

snapshot[`build a site with eta 6`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Pug example</title></head><body><header><h1>Pug example</h1></header></body></html>',
  data: {
    content: "header
  h1 #{title}
",
    date: 1970-01-01T00:00:00.000Z,
    layout: "layout2.pug",
    page: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pug example",
    url: "/layout/",
  },
  dest: {
    ext: ".html",
    path: "/layout/index",
  },
  src: {
    ext: ".pug",
    path: "/layout",
    remote: undefined,
  },
}
`;
